# differentiable-plasticity

./: README.md
data/: CMakeLists.txt  package.xml
data/include/data/: data_test.py  imgdata.h
data/src/: imgdata.cpp  imgdata_test.cpp  test.cpp
network/: CMakeLists.txt  package.xml
network/include/network/: omniglot.h
network/src/: omniglot.cpp
plastic/: CMakeLists.txt  package.xml
plastic/include/plastic/: config.h  plastictrain.h
plastic/src/: label.cpp  plastictest.cpp  plastictrain.cpp  train.cpp
tools/: CMakeLists.txt  package.xml
tools/include/tools/: random.h  xmltools.h
tools/src/: classify.cpp  xmltools.cpp
